--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,16 @@
 
 # VMs
 .vagrant/
+
+# macOS system files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Ignore local changes to this file
+base_ansible_env/ansible_inventory
+base_ansible_env/downloads_scan*
